Wed Jan  9 10:38:47 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/XMLHelper.java
	  src/org/jcae/mesh/xmldata/MeshReader.java: IOException(Throwable)
	constructor has been introduced in Java 6, replace it by
	IOException(String) to allow compilation with Java 5.
	* src/org/jcae/mesh/oemm/RawStorage.java
	  src/org/jcae/mesh/MeshValidSoup.java
	  src/org/jcae/mesh/MesherTest.java
	  src/org/jcae/mesh/amibe/patch/Calculus2D.java
	  src/org/jcae/mesh/amibe/patch/ElementPatchFactory.java
	  src/org/jcae/mesh/amibe/patch/Calculus3D.java
	  src/org/jcae/mesh/amibe/patch/Mesh2D.java
	  src/org/jcae/mesh/amibe/util/QSortedTree.java
	  src/org/jcae/mesh/amibe/util/KdTree.java: Remove @Override
	annotations for methods implementing an interface, this is not
	supported by Java 5.

Sat Dec 22 23:56:44 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject3D): Another
	try to optimize XPath expressions.  It seems that xpath.evaluate()
	scans the whole XML document and not context node only, which is
	very counterintuitive but explains why patch committed on Sep 3rd
	makes processing much faster with thousands of groups.  Modify
	last change to call Element methods directly.
	Apply the same changes in mergeGroups() too.

Thu Dec 20 18:00:07 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshToSoupConvert.java: This class
	should have been updated at November 22nd to remove degenerated
	triangles from triangle soup.
	* src/org/jcae/mesh/MesherTest.java: Unlike other junit tests,
	this class is meant to run large tests and detect regressions on
	a set of defined scenarios.
	* build.xml: New 'test-large' target to run MesherTest.
	In 'junit' target, replace <test> by <batchtest>, and detect
	compilation failures.  Output files are moved into test/results/
	and XML formatted, so that test results can be parsed by testing
	tools like cruisecontrol.
