@@ -1,3 +1,8 @@
+Mon Jan 14 12:54:45 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/Mesh.java: Remove one of the many
+	buildAdjacency() methods, it had been declared obsolete for a while.
+
 Wed Jan  9 10:38:47 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/xmldata/XMLHelper.java
